--- a/express/public/index.html
+++ b/express/public/index.html
@@ -7,10 +7,13 @@
   <title>pubil</title>
   <link rel="icon" href="data:image/ico;base64,aWNv">
   <link rel="stylesheet" href="./styles/reset.css">
+  <script src="./scripts/template-web.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
   <script src="./scripts/common.js"></script>
 </head>
 <body>
     Hello Word
     <img src="./images/img1.png" alt="">
+    <div id="list"></div>
 </body>
 </html>
